--- a/login.html
+++ b/login.html
@@ -32,7 +32,7 @@
 
                                         <div class="tile is-parent">
                                             <article class="tile is-child notification is-info">
-                                                <a style='text-decoration: none' href="Unity.html">
+                                                <a style='text-decoration: none' href="">
                                                     <figure class="image is-4by3">
                                                         <img src="loginImages/user-200.png">
                                                     </figure>
@@ -43,7 +43,7 @@
 
                                         <div class="tile is-parent">
                                             <article class="tile is-child notification is-info">
-                                                <a style='text-decoration: none' href="Unity.html">
+                                                <a style='text-decoration: none' href="">
                                                     <figure class="image is-4by3">
                                                         <img src="loginImages/user-200.png">
                                                     </figure>
@@ -54,7 +54,7 @@
 
                                         <div class="tile is-parent">
                                             <article class="tile is-child notification is-info">
-                                                <a style='text-decoration: none' href="Unity.html">
+                                                <a style='text-decoration: none' href="">
                                                     <figure class="image is-4by3">
                                                         <img src="loginImages/user-200.png">
                                                     </figure>
@@ -65,7 +65,7 @@
 
                                         <div class="tile is-parent">
                                             <article class="tile is-child notification is-info">
-                                                <a style='text-decoration: none' href="Unity.html">
+                                                <a style='text-decoration: none' href="">
                                                     <figure class="image is-4by3">
                                                         <img src="loginImages/Add User.png">
                                                     </figure>
