--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </div>
                 <div class="column is-narrow">
                     <a style="margin-right: 12px" href="http://www.cleversolve.com" target="_blank">
-                        <img src="cs.png" width="64" height="64">
+                        <img src="cs01.png" width="64" height="64">
                     </a>
                 </div>
             </div>
