--- a/index.html
+++ b/index.html
@@ -86,6 +86,15 @@
                      <a href="AOS.html" class="dropdown-item">
                         AOS
                     </a>
+                    <a href="New.html" class="dropdown-item">
+                        New Redesign v1
+                    </a>
+                    <a href="templated-visualize/index.html" class="dropdown-item">
+                        New Redesign v2
+                    </a>
+                    <a href="#" class="dropdown-item">
+                        Weddingful
+                    </a>
                 </div>
             </div>
         </div>
