Forgot a capital letter on a file

--- a/Weddingful/Weddingful.html
+++ b/Weddingful/Weddingful.html
@@ -38,7 +38,7 @@
 
         <br />
 
-        <img height="80%" class="center-block" src="phone.png" />
+        <img height="80%" class="center-block" src="Phone.png" />
 
         <br><br />
 
