--- a/templated-visualize/index.html
+++ b/templated-visualize/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Visualize by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
--->
+
 <html>
 
 <head>
@@ -30,11 +26,12 @@
 
 
             <ul class="icons">
-                <li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
-                <li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
-                <li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
-                <li><a href="#" class="icon style2 fa-500px"><span class="label">500px</span></a></li>
+<!--                <li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>-->
+<!--                <li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>-->
+<!--                <li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>-->
+<!--                <li><a href="#" class="icon style2 fa-500px"><span class="label">500px</span></a></li>-->
                 <li><a href="#" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
+                <li><a href="#" class="icon style2 fa-linkedin"></a></li>
             </ul>
         </header>
         <!-- HEADER END-->
@@ -47,7 +44,7 @@
                 <div>
                     <a href="images/fulls/01.jpg">
                         <img src="images/thumbs/01.jpg" alt="" />
-                        <h3>Lorem ipsum dolor sit amet</h3>
+                        <h3>Photo 01</h3>
                     </a>
                     <a href="images/fulls/02.jpg">
                         <img src="images/thumbs/02.jpg" alt="" />
