--- a/templated-visualize/index.html
+++ b/templated-visualize/index.html
@@ -22,7 +22,7 @@
             <span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
 
             <h1><strong>Gerardo Gonzalez</strong></h1>
-            <h2>Web & Mobile App Developer</h2>
+            <h2>Application and Web Developer</h2>
 
 
             <ul class="icons">
@@ -30,8 +30,8 @@
 <!--                <li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>-->
 <!--                <li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>-->
 <!--                <li><a href="#" class="icon style2 fa-500px"><span class="label">500px</span></a></li>-->
-                <li><a href="#" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
-                <li><a href="#" class="icon style2 fa-linkedin"></a></li>
+                <li><a href="mailto:gerardo@ggonzalez.org" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
+                <li><a href="www.linkedin.com/in/GerardoHGonzalez" class="icon style2 fa-linkedin"></a></li>
             </ul>
         </header>
         <!-- HEADER END-->
