--- a/index.html
+++ b/index.html
@@ -99,8 +99,7 @@
 
     </section>
     <!--HERO BANNER END-->
-    <a href="itms-services://?action=download-manifest&url=https://www.dropbox.com/s/elqcyekri90ptp5/manifest.plist">Tap Here to Install<br />APPNAME<br />INSTALLED</a>
-    <section class="section">
+<a href="itms-services://?action=download-manifest&url=https://www.dropbox.com/s/elqcyekri90ptp5/manifest.plist">Install App</a>    <section class="section">
         <div class="container">
             <div class="tile is-ancestor">
                 <div class="tile is-vertical">
