--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
     </section>
     <!--HERO BANNER END-->
-<a href="itms-services://?action=download-manifest&url=https://www.dropbox.com/s/a2uhm6zl6f1o4y0/manifest.plist">Insta1ll1 App</a>    <section class="section">
+<a href="itms-services://?action=download-manifest&url=https://drive.google.com/open?id=1ku4ZxtLPv1AqfkgztxBfJ444BEZBx1bd">Insta1ll1 App</a>    <section class="section">
         <div class="container">
             <div class="tile is-ancestor">
                 <div class="tile is-vertical">
